# yonsei-dev-index

./: .env.example  .gitignore  .prettierignore  LICENSE  README.md  compose.yaml  open-api-venv.bat  open-root-venv.bat  open-web-venv.bat  ruff.toml
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 20260318_000001_initial_schema.py  20260319_000002_profile_update_limit.py  20260319_000003_harden_verification_constraints.py  20260320_000004_add_organizations.py  20260322_000005_add_organization_submissions.py  20260322_000006_add_review_note_to_organization_submissions.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  routes.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  mixins.py  session.py  user.py
apps/api/app/schemas/: organization.py  organization_submission.py  profile.py  verification.py
apps/api/app/scripts/: seed_organizations.py
apps/api/app/services/: auth_service.py  directory_service.py  email_service.py  organization_service.py  organization_submission_service.py  profile_service.py  session_service.py  verification_service.py
apps/api/tests/: test_profile_schema.py  test_profile_service.py  test_verification_service.py
apps/web/: next.config.mjs  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
docs/: architecture.md  b2b-product-direction.md  implementation-spec.md  local-development.md  technical-spec.md
docs/releases/: 1.0.0.md  1.0.1.md
(+15 files in other folders)
